# allocators

./: .clang-format  CMakeLists.txt  README.md  build.sh
app/: CMakeLists.txt  main.c
include/: arena.h  linear.h
